# can-i-jog-today

./: .gitattributes
.github/workflows/: ci.yml
backend/: .env  .gitignore  README.md  pyproject.toml
backend/app/: main.py
backend/app/cache/: memcache.py
backend/app/core/: config.py
backend/app/models/: weather_model.py
backend/app/repositories/: weather_repository.py
backend/app/routes/: weather_router.py
backend/app/services/: weather_service.py
backend/app/utils/: config.py  logger.py
backend/tests/: test_health.py  test_weather.py
frontend/: astro.config.mjs  package-lock.json  package.json  tailwind.config.js
frontend/src/components/: Example.astro  SearchBar.astro  WeatherResult.astro
frontend/src/layouts/: Layout.astro
frontend/src/pages/: index.astro
