[tool.poetry]
name = "weather-app"
version = "0.0.1"
description = "API para el proyecto de Can I Jog Today"
authors = ["manu <manloralm@outlook.com>"]
packages = [
    { include = "app"},
]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.2"
uvicorn = "^0.32.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "app.main:run"

